# synfig-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: canvas.rs  color.rs  layer.rs  lib.rs  loadcanvas.rs  main.rs  time.rs  uniqueid.rs  valuenode.rs  vector.rs  version.rs  widthpoint.rs
src/color/: gamma.rs  pixelformat.rs
synfig-core/: Cargo.toml  README.md
synfig-core/src/: angle.rs  canvas.rs  canvasbase.rs  color.rs  filesystem.rs  layer.rs  lib.rs  loadcanvas.rs  segment.rs  valuenode.rs  vector.rs  version.rs
synfig-core/src/color/: common.rs
synfig-core/tests/: uniqueid.rs
synfig-gui/: Cargo.toml
synfig-gui/src/: main.rs
tests/: loadcanvas_test.rs  uniqueid_test.rs
