[package]
name = "synfig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "loadcanvas-test"
path = "src/bin/loadcanvas-test.rs"

[dependencies]
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.9.1"