[package]
name = "synfig-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "synfig-core"
]

[dependencies]
synfig-core = {path = "synfig-core", version = "0.1.0"}
env_logger = "0.9.1"

